--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,9 +32,10 @@ steps:
     outputDirectory: '$(outputDirectory)'
     configuration: '$(buildConfiguration)'
 
+
 - task: VSBuild@1
   inputs:
-    solution: '$(solution)'
+    solution: 'F3N.Hoard/F3N.Hoard.csproj'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
