Removed static references. Can now be used with DI containers.

--- a/F3N.Hoard/F3N.Hoard.csproj
+++ b/F3N.Hoard/F3N.Hoard.csproj
@@ -13,6 +13,7 @@ Works anywhere but tested in Blazor and Xamarin.
 
 Uses SQLite and Akavache API to provide persistence</Description>
     <RepositoryUrl>https://github.com/Fifty3North/Hoard</RepositoryUrl>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
