Updated samples from pre-release Blazor to final versions

--- a/F3N.Hoard/F3N.Hoard.csproj.nuspec
+++ b/F3N.Hoard/F3N.Hoard.csproj.nuspec
@@ -10,8 +10,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Initial release</releaseNotes>
-    <copyright>Copyright © F3N Limited 2019</copyright>
-    <tags>SQLite Xamarin Redux Store</tags>
+    <copyright>Copyright © F3N Limited 2020</copyright>
+    <tags>Blazor SQLite Xamarin Redux Store</tags>
     <dependencies>
       <dependency id="akavache" version="6.5.9" />
       <dependency id="System.Reactive.Linq" version="4.1.5" />
