Implement browser storage provider for Blazor

--- a/F3N.Hoard/F3N.Hoard.csproj
+++ b/F3N.Hoard/F3N.Hoard.csproj
@@ -21,4 +21,8 @@ Uses SQLite and Akavache API to provide persistence</Description>
     <PackageReference Include="System.Reactive.Linq" Version="4.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\F3N.Hoard.Shared\F3N.Hoard.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
