--- a/F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj
+++ b/F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj
@@ -1,7 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<RepositoryUrl>https://github.com/Fifty3North/Hoard.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<AssemblyTitle>F3N.Hoard.BlazorLocalStorage</AssemblyTitle>
+		<Company>Fifty3North (F3N Limited)</Company>
+		<Product>F3N.Hoard.BlazorLocalStorage</Product>
+		<Description>Blazor Local Storage for F3N.Hoard</Description>
+		<Copyright>F3N Limited 2020</Copyright>
+		<Version>1.0.0</Version>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+		<OutputPath>bin\$(Configuration)\</OutputPath>
+		<Authors>Fifty3North (F3N Limited)</Authors>
+		<PackageId>F3N.Hoard.BlazorLocalStorage</PackageId>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageProjectUrl>https://github.com/Fifty3North/Hoard</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
