--- a/F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj
+++ b/F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj
@@ -9,13 +9,14 @@
 		<Product>F3N.Hoard.BlazorLocalStorage</Product>
 		<Description>Blazor Local Storage for F3N.Hoard</Description>
 		<Copyright>F3N Limited 2020</Copyright>
-		<Version>1.0.0</Version>
+		<Version>1.1.0-prerelease</Version>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<OutputPath>bin\$(Configuration)\</OutputPath>
 		<Authors>Fifty3North (F3N Limited)</Authors>
 		<PackageId>F3N.Hoard.BlazorLocalStorage</PackageId>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/Fifty3North/Hoard</PackageProjectUrl>
+		<License>https://licenses.nuget.org/MIT</License>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,7 +24,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\F3N.Hoard.Shared\F3N.Hoard.Shared.csproj" />
       <ProjectReference Include="..\F3N.Hoard\F3N.Hoard.csproj" />
     </ItemGroup>
 
