--- a/Hoard.Tests/Hoard.Tests.csproj
+++ b/Hoard.Tests/Hoard.Tests.csproj
@@ -4,11 +4,16 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+        <XunitStartupAssembly>Hoard.Tests</XunitStartupAssembly>
+        <XunitStartupFullName>Hoard.Tests.Startup</XunitStartupFullName>
+
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Xunit.DependencyInjection" Version="7.0.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\F3N.Hoard.BlazorLocalStorage\F3N.Hoard.BlazorLocalStorage.csproj" />
     <ProjectReference Include="..\F3N.Hoard\F3N.Hoard.csproj" />
   </ItemGroup>
 
