--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,11 @@ steps:
 - script: dotnet restore
   displayName: 'dotnet restore $(buildConfiguration)'
 
-- script: dotnet build F3N.Hoard.Shared\F3N.Hoard.Shared.csproj --configuration $(buildConfiguration) --no-restore
+- script: dotnet build F3N.Hoard.Shared/F3N.Hoard.Shared.csproj --configuration $(buildConfiguration) --no-restore
   displayName: 'dotnet build $(buildConfiguration)'
-- script: dotnet build F3N.Hoard.BlazorLocalStorage.csproj --configuration $(buildConfiguration) --no-restore
+- script: dotnet build F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj --configuration $(buildConfiguration) --no-restore
   displayName: 'dotnet build $(buildConfiguration)'
-- script: dotnet build Hoard.Tests\Hoard.Tests.csproj --configuration $(buildConfiguration) --no-restore
+- script: dotnet build Hoard.Tests/Hoard.Tests.csproj --configuration $(buildConfiguration) --no-restore
   displayName: 'dotnet build $(buildConfiguration)'
 
 - script: dotnet test --configuration $(buildConfiguration) --no-restore --verbosity normal --logger trx
