--- a/F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj
+++ b/F3N.Hoard.BlazorLocalStorage/F3N.Hoard.BlazorLocalStorage.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
@@ -20,7 +20,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.ProtectedBrowserStorage" Version="0.1.0-alpha.19521.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.ProtectedBrowserStorage" Version="5.0.0-rc.1.20451.17" />
     </ItemGroup>
 
     <ItemGroup>
