--- a/F3N.Hoard/F3N.Hoard.csproj
+++ b/F3N.Hoard/F3N.Hoard.csproj
@@ -14,8 +14,9 @@ Works anywhere but tested in Blazor and Xamarin.
 Uses SQLite and Akavache API to provide persistence</Description>
     <RepositoryUrl>https://github.com/Fifty3North/Hoard.git</RepositoryUrl>
     <LangVersion>default</LangVersion>
-	<Version>2.0.0</Version>
+	<Version>2.0.1</Version>
 	  <License>https://licenses.nuget.org/MIT</License>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
