--- a/F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj
+++ b/F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj
@@ -4,23 +4,24 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<RepositoryUrl>https://github.com/Fifty3North/Hoard.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<AssemblyTitle>F3N.Hoard.BlazorLocalStorage</AssemblyTitle>
+		<AssemblyTitle>F3N.Hoard.BlazorServerStorage</AssemblyTitle>
 		<Company>Fifty3North (F3N Limited)</Company>
-		<Product>F3N.Hoard.BlazorLocalStorage</Product>
-		<Description>Blazor Local Storage for F3N.Hoard</Description>
-		<Copyright>F3N Limited 2020</Copyright>
-		<Version>2.0.1-prerelease</Version>
+		<Product>F3N.Hoard.BlazorServerStorage</Product>
+		<Description>Blazor Protected Broswer Storage for F3N.Hoard</Description>
+		<Copyright>F3N Limited 2023</Copyright>
+		<Version>3.0.0</Version>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<OutputPath>bin\$(Configuration)\</OutputPath>
 		<Authors>Fifty3North (F3N Limited)</Authors>
-		<PackageId>F3N.Hoard.BlazorLocalStorage</PackageId>
+		<PackageId>F3N.Hoard.BlazorServerStorage</PackageId>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/Fifty3North/Hoard</PackageProjectUrl>
 		<License>https://licenses.nuget.org/MIT</License>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Components.ProtectedBrowserStorage" Version="5.0.0-rc.1.20451.17" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+      <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="7.0.3" />
     </ItemGroup>
 
     <ItemGroup>
