--- a/Samples/Blazor/Hoard.SampleWASM/Hoard.SampleWASM.csproj
+++ b/Samples/Blazor/Hoard.SampleWASM/Hoard.SampleWASM.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
+    <ProjectReference Include="..\..\..\F3N.Hoard.BlazorWasmStorage\F3N.Hoard.BlazorWasmStorage.csproj" />
+    <ProjectReference Include="..\Hoard.SampleLogic\Hoard.SampleLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\F3N.Hoard.BlazorLocalStorage\F3N.Hoard.BlazorLocalStorage.csproj" />
-    <ProjectReference Include="..\Hoard.SampleLogic\Hoard.SampleLogic.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
