--- a/Samples/Blazor/Hoard.SampleWeb/Hoard.SampleWeb.csproj
+++ b/Samples/Blazor/Hoard.SampleWeb/Hoard.SampleWeb.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\F3N.Hoard.BlazorLocalStorage\F3N.Hoard.BlazorServerStorage.csproj" />
     <ProjectReference Include="..\Hoard.SampleLogic\Hoard.SampleLogic.csproj" />
   </ItemGroup>
 
