Missed folder rename in project and solution references

--- a/Hoard.Tests/Hoard.Tests.csproj
+++ b/Hoard.Tests/Hoard.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\F3N.Hoard.BlazorLocalStorage\F3N.Hoard.BlazorServerStorage.csproj" />
+    <ProjectReference Include="..\F3N.Hoard.BlazorServerStorage\F3N.Hoard.BlazorServerStorage.csproj" />
     <ProjectReference Include="..\F3N.Hoard.Sqlite\F3N.Hoard.Sqlite.csproj" />
     <ProjectReference Include="..\F3N.Hoard\F3N.Hoard.csproj" />
   </ItemGroup>
