--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -3,6 +3,10 @@ name: .NET Core
 on:
   push:
     branches: [ master, nuget-testing ]
+    
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
   pull_request:
     branches: [ master ]
 
