--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -30,18 +30,18 @@ jobs:
     - name: Test
       run: dotnet test Hoard.Tests/Hoard.Tests.csproj --verbosity normal
       
-    - name: Create NuGet Package F3N.Hoard
+    - name: Create NuGet Package F3N.Hoard v${{ env.GITHUB_REF_NAME }}
       if: startsWith(github.ref, 'refs/tags/')
-      run: dotnet pack F3N.Hoard/F3N.Hoard.csproj --no-build --output .\ /p:PackageVersion=${{ env.GITHUB_REF_NAME }}
-    - name: Create NuGet Package F3N.Hoard.BlazorServerStorage
+      run: dotnet pack F3N.Hoard/F3N.Hoard.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard.BlazorServerStorage v${{ env.GITHUB_REF_NAME }}
       if: startsWith(github.ref, 'refs/tags/')
-      run: dotnet pack F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj --no-build --output .\ /p:PackageVersion=${{ env.GITHUB_REF_NAME }}
-    - name: Create NuGet Package F3N.Hoard.BlazorWasmStorage
+      run: dotnet pack F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard.BlazorWasmStorage v${{ env.GITHUB_REF_NAME }}
       if: startsWith(github.ref, 'refs/tags/')
-      run: dotnet pack F3N.Hoard.BlazorWasmStorage/F3N.Hoard.BlazorWasmStorage.csproj  --configuration Release --no-build --output .\ /p:PackageVersion=${{ env.GITHUB_REF_NAME }}
-    - name: Create NuGet Package F3N.Hoard.Sqlite
+      run: dotnet pack F3N.Hoard.BlazorWasmStorage/F3N.Hoard.BlazorWasmStorage.csproj  --configuration Release --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard.Sqlite v${{ env.GITHUB_REF_NAME }}
       if: startsWith(github.ref, 'refs/tags/')
-      run: dotnet pack F3N.Hoard.Sqlite/F3N.Hoard.Sqlite.csproj --no-build --output .\ /p:PackageVersion=${{ env.GITHUB_REF_NAME }}
+      run: dotnet pack F3N.Hoard.Sqlite/F3N.Hoard.Sqlite.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
       run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
