--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -2,7 +2,7 @@ name: .NET Core
 
 on:
   push:
-    branches: [ master, nuget-testing ]
+    branches: [ master, nuget-test ]
     
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
