--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v1.5.0
       with:
         dotnet-version: 7.0.201
         
@@ -30,16 +30,18 @@ jobs:
     - name: Test
       run: dotnet test Hoard.Tests/Hoard.Tests.csproj --verbosity normal
       
-    - name: Create NuGet Package F3N.Hoard v${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard
       if: startsWith(github.ref, 'refs/tags/')
-      run: dotnet pack F3N.Hoard/F3N.Hoard.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
-    - name: Create NuGet Package F3N.Hoard.BlazorServerStorage v${{ env.GITHUB_REF_NAME }}
+      run: |
+        echo "Building version: [ $GITHUB_REF_NAME , ${{  github.ref_name }} , ${{env.GITHUB_REF_NAME}} ]"
+        dotnet pack F3N.Hoard/F3N.Hoard.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard.BlazorServerStorage
       if: startsWith(github.ref, 'refs/tags/')
       run: dotnet pack F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
-    - name: Create NuGet Package F3N.Hoard.BlazorWasmStorage v${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard.BlazorWasmStorage
       if: startsWith(github.ref, 'refs/tags/')
       run: dotnet pack F3N.Hoard.BlazorWasmStorage/F3N.Hoard.BlazorWasmStorage.csproj  --configuration Release --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
-    - name: Create NuGet Package F3N.Hoard.Sqlite v${{ env.GITHUB_REF_NAME }}
+    - name: Create NuGet Package F3N.Hoard.Sqlite
       if: startsWith(github.ref, 'refs/tags/')
       run: dotnet pack F3N.Hoard.Sqlite/F3N.Hoard.Sqlite.csproj --no-build --output .\ -p:PackageVersion=${{ env.GITHUB_REF_NAME }}
     - name: Publish
