--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -34,8 +34,8 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       run: |
         echo "Packing version: ${{  github.ref_name }}"
-        dotnet pack F3N.Hoard/F3N.Hoard.csproj --no-build --output .\ -p:PackageVersion=${{  github.ref_name }}
-        dotnet pack F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj --no-build --output .\ -p:PackageVersion=${{  github.ref_name }}
-        dotnet pack F3N.Hoard.BlazorWasmStorage/F3N.Hoard.BlazorWasmStorage.csproj  --configuration Release --no-build --output .\ -p:PackageVersion=${{  github.ref_name }}
-        dotnet pack F3N.Hoard.Sqlite/F3N.Hoard.Sqlite.csproj --no-build --output .\ -p:PackageVersion=${{  github.ref_name }}
+        dotnet pack F3N.Hoard/F3N.Hoard.csproj --no-build -p:PackageVersion=${{  github.ref_name }} --version-suffix "${{github.run_number}}" --output .\
+        dotnet pack F3N.Hoard.BlazorServerStorage/F3N.Hoard.BlazorServerStorage.csproj --no-build -p:PackageVersion=${{  github.ref_name }} --version-suffix "${{github.run_number}}" --output .\
+        dotnet pack F3N.Hoard.BlazorWasmStorage/F3N.Hoard.BlazorWasmStorage.csproj  --configuration Release --no-build -p:PackageVersion=${{  github.ref_name }} --version-suffix "${{github.run_number}}" --output .\
+        dotnet pack F3N.Hoard.Sqlite/F3N.Hoard.Sqlite.csproj --no-build -p:PackageVersion=${{  github.ref_name }} --version-suffix "${{github.run_number}}" --output .\ 
         # nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
